Edited README via GitHub

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-These are the code examples for the IBM Developerworks article "Enabling XML responses in SugarCRM REST web services"
+These are the code examples for the IBM Developerworks article "Extend SugarCRM REST web services to use XML"
